[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iterativerecursion"
version = "0.3"
description = "Python3 module to simulate recursion with iteration."
readme = "README.md"

license = "MIT"
license-files = ["LICENSE"]

authors = [
    {name = "Carlos A. Planchón", email = "carlosandresplanchonprestes@gmail.com"}
]
keywords = ["iterative", "recursion"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
requires-python = ">=3.9"

[project.urls]
Repository = "https://github.com/carlosplanchon/iterativerecursion"

[tool.setuptools]
packages = ["iterativerecursion"]
